tests/samples/compile_errors/member_access/invalid_dot_reference_no_with.bas
Attribute VB_Name = "InvalidDot"
Sub TestInvalidDot()
    .Clear ' Invalid dot reference without With
End Sub
